start cleaning code, some ObservedSky